// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in <SearchBox/> should display the component correctly 1`] = `
Array [
  <header
    className="header"
  >
    <div>
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <img
          alt="logo_ml"
          className="meli-logo"
          src="logo_ml.png"
          title="Mercado Libre - Donde comprar y vender de todo"
        />
      </div>
      <form
        onSubmit={[Function]}
      >
        <input
          aria-label="Buscar productos, marcas y más"
          id="serach_input"
          name="search"
          onChange={[Function]}
          placeholder="Buscar productos, marcas y más"
          type="text"
          value=""
        />
        <button
          type="submit"
        >
          <img
            alt="ic_search"
            src="ic_search.png"
            title="Buscar"
          />
        </button>
      </form>
    </div>
  </header>,
  "",
]
`;

exports[`Test in <SearchBox/> should display the component correctly 2`] = `
Object {
  "action": "PUSH",
  "length": 2,
  "location": Object {
    "hash": "",
    "key": "q06uc0",
    "pathname": "/items",
    "search": "?search=monitor curvo",
  },
}
`;

exports[`Test in <SearchBox/> should display the component correctly 3`] = `
Object {
  "hash": "",
  "key": "q06uc0",
  "pathname": "/items",
  "search": "?search=monitor curvo",
}
`;
